# clothing_store

./: .gitignore  pyproject.toml
products/: models.py  serializer.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_favoriteproducts.py
store/: settings.py
users/: authentication.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
